objects/Zip__c.object
<CustomObject>
    <description>Zip Code Objects hold Demographic Data, primarily US Census Median HHI</description>
    <fields>
        <fullName>Approved_Zip_Code_in_DMA__c</fullName>
        <description>Determined from Eric Kung&apos;s Volta Approved DMA.xlsx list which was pulled from Nielsen DMA website</description>
        <label>Approved ZIP Code in DMA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Override - Approved</fullName>
                    <isActive>false</isActive>
                    <label>Override - Approved</label>
                </value>
                <value>
                    <fullName>Override - Not Approved</fullName>
                    <isActive>false</isActive>
                    <label>Override - Not Approved</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA_Code__c</fullName>
        <description>Determined from Eric Kung&apos;s Volta Approved DMA.xlsx list which was pulled from Nielsen DMA website</description>
        <label>DMA Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Population__c</fullName>
        <description>Female population (In %) in the respective zip code.</description>
        <inlineHelpText>Female population (In %) in the respective zip code.</inlineHelpText>
        <label>Female Population</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>HHI_MKT_Index__c</fullName>
        <label>HHI MKT Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Households__c</fullName>
        <label>Households</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Area_sq_m__c</fullName>
        <label>Land Area (sq m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAQuality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MASimilarity__c</fullName>
        <label>Similarity (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASkipGeocoding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Geocoding (MapAnything)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAVerifiedLatitude__c</fullName>
        <label>Verified Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAVerifiedLongitude__c</fullName>
        <label>Verified Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Population__c</fullName>
        <description>The male population in the zip code (Represented as a %)</description>
        <inlineHelpText>The male population in the zip code (Represented as a %)</inlineHelpText>
        <label>Male Population</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mean_HHI__c</fullName>
        <label>Mean HHI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mean_Household_Income__c</fullName>
        <label>Mean Household Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mean_Household_Income_dollars__c</fullName>
        <label>Mean Income HHI 2015 Census</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Median_HHI__c</fullName>
        <description>From David&apos;s Spreadsheet</description>
        <inlineHelpText>From David&apos;s Spreadsheet</inlineHelpText>
        <label>Median HHI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Median_Household_Income__c</fullName>
        <label>Median Household Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Median_Income__c</fullName>
        <label>Median Income HHI ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Median_household_income_dollars__c</fullName>
        <label>Median Income HHI 2015 Census</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nielsen_DMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nielsen DMA</label>
        <referenceTo>Nielsen_DMA__c</referenceTo>
        <relationshipLabel>Zips</relationshipLabel>
        <relationshipName>Zips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_of_HHs_with_HHI_10_000_to_14_9__c</fullName>
        <label>% of HHs with HHI $10,000 to $14,999</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <description>2 Letter State Code</description>
        <inlineHelpText>2 Letter State Code</inlineHelpText>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Households__c</fullName>
        <label>Total Number of Households</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Municipality</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>City and Borough</fullName>
                </value>
                <value>
                    <fullName>Town</fullName>
                </value>
                <value>
                    <fullName>Township</fullName>
                </value>
                <value>
                    <fullName>Village</fullName>
                </value>
                <value>
                    <fullName>Borough</fullName>
                </value>
                <value>
                    <fullName>Charter Township</fullName>
                </value>
                <value>
                    <fullName>Unified Government</fullName>
                </value>
                <value>
                    <fullName>Consolidated Government</fullName>
                </value>
                <value>
                    <fullName>Urban County</fullName>
                </value>
                <value>
                    <fullName>Metropolitan Government</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Census_Region__c</fullName>
        <description>https://www2.census.gov/geo/pdfs/maps-data/maps/reference/us_regdiv.pdf</description>
        <inlineHelpText>https://www2.census.gov/geo/pdfs/maps-data/maps/reference/us_regdiv.pdf</inlineHelpText>
        <label>US Census Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_Census_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unemployment_Rate__c</fullName>
        <label>Unemployment Rate</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Water_Area_sq_m__c</fullName>
        <label>Water Area (sq m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_HHs_with_HHI_100_000_to_149_999__c</fullName>
        <label>% of HHs with HHI $100,000 to $149,999</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_HHs_with_HHI_150_000_or_more__c</fullName>
        <label>% of HHs with HHI $150,000 or more</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_HHs_with_HHI_150_000_to_199_999__c</fullName>
        <label>% of HHs with HHI $150,000 to $199,999</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_HHs_with_HHI_15_000_to_24_999__c</fullName>
        <label>% of HHs with HHI $15,000 to $24,999</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_HHs_with_HHI_200_000_or_more__c</fullName>
        <label>% of HHs with HHI $200,000 or more</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_HHs_with_HHI_Less_than_10_00__c</fullName>
        <label>% of HHs with HHI Less than $10,00</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Zip</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Nielsen_DMA__c</columns>
        <columns>Approved_Zip_Code_in_DMA__c</columns>
        <columns>Mean_Household_Income__c</columns>
        <columns>Median_Household_Income__c</columns>
        <columns>HHI_MKT_Index__c</columns>
        <columns>DMA_Code__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_CA</fullName>
        <columns>NAME</columns>
        <columns>Median_Income__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Households__c</columns>
        <columns>Land_Area_sq_m__c</columns>
        <columns>Population__c</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Water_Area_sq_m__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Code__c</field>
            <operation>equals</operation>
            <value>ca</value>
        </filters>
        <label>All CA</label>
    </listViews>
    <listViews>
        <fullName>All_Carmel</fullName>
        <columns>NAME</columns>
        <columns>Median_Income__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Households__c</columns>
        <columns>Land_Area_sq_m__c</columns>
        <columns>Population__c</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Water_Area_sq_m__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>contains</operation>
            <value>carmel</value>
        </filters>
        <label>All Carmel</label>
    </listViews>
    <listViews>
        <fullName>Commas</fullName>
        <columns>NAME</columns>
        <columns>Median_Income__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Households__c</columns>
        <columns>Land_Area_sq_m__c</columns>
        <columns>Population__c</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Water_Area_sq_m__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&quot;,&quot;</value>
        </filters>
        <label>Commas</label>
    </listViews>
    <listViews>
        <fullName>Nielsen_DMA</fullName>
        <columns>NAME</columns>
        <columns>Nielsen_DMA__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>County__c</columns>
        <columns>Mean_Household_Income_dollars__c</columns>
        <columns>Median_household_income_dollars__c</columns>
        <filterScope>Everything</filterScope>
        <label>Nielsen DMA</label>
    </listViews>
    <listViews>
        <fullName>San_Francisco</fullName>
        <columns>NAME</columns>
        <columns>Median_Income__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Households__c</columns>
        <columns>Land_Area_sq_m__c</columns>
        <columns>Population__c</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Water_Area_sq_m__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
            <value>San Francisco</value>
        </filters>
        <label>San Francisco</label>
    </listViews>
    <listViews>
        <fullName>x94103</fullName>
        <columns>NAME</columns>
        <columns>Median_Income__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Households__c</columns>
        <columns>Land_Area_sq_m__c</columns>
        <columns>Population__c</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Water_Area_sq_m__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>9410</value>
        </filters>
        <label>94103</label>
    </listViews>
    <nameField>
        <label>Zip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zips</pluralLabel>
    <recordTypes>
        <fullName>Zip</fullName>
        <active>true</active>
        <label>Zip</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>